# rameplayer-utils

./: .gitignore  CMakeLists.txt
librameutil/: CMakeLists.txt  librameutil.c  rameutil.h
rameclock/: CMakeLists.txt  button.c  clock.c  led.c
ramefbcp/: CMakeLists.txt  README.md  debug.c  debug.h  icon-data.h  infodisplay.c  infodisplay.h  input.c  input.h  main.c  ttf.c  ttf.h  update_to_rpi.sh
rametext/: CMakeLists.txt  main.c
